[package]
name = "thirdeye"
description = "Opinionated exploration assistant for Elite: Dangerous"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dmarcuse/ed-thirdeye"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive", "env"] }
dirs = "6.0.0"
env_logger = "0.11.6"
log = "0.4.25"
notify = { version = "8.0.0", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["float_roundtrip"] }
