[package]
name = "thirdeye"
description = "Opinionated exploration assistant for Elite: Dangerous"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dmarcuse/ed-thirdeye"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive", "env"] }
directories = "6.0.0"
ed-journals = { version = "0.7.1", default-features = false }
eframe = { version = "0.31.0", features = ["persistence"] }
egui_extras = { version = "0.31.0", features = ["image"] }
egui_tiles = "0.12.0"
env_logger = "0.11.6"
log = "0.4.25"
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
typetag = "0.2.19"

[patch.crates-io]
# remove once https://github.com/emilk/egui/pull/5640 is merged
egui = { git = "https://github.com/IaVashik/egui-textedit-fix.git", rev = "adde2b0" }
